2011-01-10  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* VERSION: Set to 4.0.0.rc3.SVN.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

2011-01-10  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-libraries 4.0+rc2 release.

	* VERSION: Set to 4.0.0.rc2.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

	* CHANGES: Updated.

2011-01-08  Matthew Mundell <matthew.mundell@greenbone.net>

	* base/openvas_file.c: Remove todos about moving into this module.

2011-01-03  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	Fix rule saving for ldap authenticated users by ensuring existence of
	rules directory.

	* misc/ldap_auth.c (ldap_auth_query_rules): Create users rules
	directory if it does not exist (previously done by
	openvas_auth_store_user_rules). Save rules also if none fetched (i.e.
	empty, default rules).

2011-01-03  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* misc/openvas_auth.c (openvas_auth_store_user_rules): Clarify
	parameter documentation.

2011-01-03  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* misc/ldap_auth.c (user_dir_path): New function to determine user
	directory.
	(ldap_auth_query_rules, ldap_authenticate): Use new function.

2011-01-03  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* misc/openvas_auth.c: Minimal structural improvement of module
	documentation.

2011-01-03  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* misc/openvas_auth.c: Updated module documentation to include the
	possibility to use an ADS as remote authentication source.
	Removed todo comment about OPENVAS_USER_DIR, which is not used anymore.

2011-01-03  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* misc/openvas_auth.c (openvas_auth_mkrulesdir): New function to create
	the directory where users rules are placed ("auth").

	* misc/openvas_auth.h (openvas_auth_mkrulesdir): Proto for new
	function.
